Comment out deleteWish()

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
       }
 
       // ???
-      function deleteWish( wish ) {
-        wishes.removeEntity( wish, function( error, response ) {
-          if ( error ) {
-            alert('Delete Failed');
-          }
-        });
-      }
+      // function deleteWish( wish ) {
+      //   wishes.removeEntity( wish, function( error, response ) {
+      //     if ( error ) {
+      //       alert('Delete Failed');
+      //     }
+      //   });
+      // }
 
       $('#btn-add-wish').on( 'click', addWish );
 
